# Cuda-Camera-Pipeline

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  requirements-data.txt  run_all.py
.cursor/rules/: environment.mdc  keep-readme-accurate.mdc
blocks/: auto_white_balance.cu  black_level.cu  black_level_optimized.cu  color_correction_matrix.cu  dead_pixel_correction.cu  demosaic.cu  edge_enhancement.cu  gamma.cu  len_shading_correction.cu  output_pack.cu  raw_unpack.cu  rgb_to_yuv.cu  sensor_linearization.cu  tone_mapping.cu  yuv_denoise.cu
config/: golden_tuning.json
data/: README.md
docs/: pipeline.mmd  pipeline.puml  testing.md
docs/algorithms/: yuv_denoise.md
docs/troubleshooting/: chroma_noise_on_green_screen.md
include/: blocks.h  frame_buffer.h  frame_loader.h  isp_block.h  isp_pipeline.h  sensor_config.h
src/: frame_loader.cpp  isp_pipeline.cpp  main.cpp  sensor_config.cpp
tests/: CMakeLists.txt  test_auto_white_balance.cu  test_black_level.cu  test_color_correction_matrix.cu  test_dead_pixel_correction.cu  test_demosaic.cu  test_edge_enhancement.cu  test_frame_buffer.cu  test_gamma.cu  test_isp_pipeline.cu  test_len_shading_correction.cu  test_raw_unpack.cu  test_rgb_to_yuv.cu  test_sensor_config.cpp  test_tone_mapping.cu  test_yuv_denoise.cu
tools/: convert_yml_to_json.py  download_data.py  gen_mermaid.py  gen_puml.py  synthetic_gen.py
